name:                douglass-final-cs457
version:             0.1.0
homepage:            https://github.com/fimad/scalpel
author:              Christopher Douglass
maintainer:          cdd2@pdx.edu
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable scrape
  default-language: Haskell2010
  main-is:          src/Main.hs
  build-depends:
          base          >= 4.6 && < 5
      ,   data-default
      ,   http-client
      ,   http-client-tls
      ,   http-types
      ,   scalpel
      ,   time
  ghc-options: -W
